<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_call" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_call_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingLeft="50dp"        
        android:paddingTop="80dp" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/bt_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/str_reject" />

            <Button
                android:id="@+id/bt_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="30dp"
                android:text="@string/str_accept" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:paddingTop="20dp">
            <Button
                android:id="@+id/bt_hangup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/str_hangup" />

            <Button
                android:id="@+id/bt_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="30dp"
                android:text="@string/str_speaker" />
           
        </TableRow>
    </TableLayout>

</LinearLayout>